Feat: Added access point class DevCommand.java.